# hal_microchip

./: CMakeLists.txt  README.md
drivers/phy_802154/: CMakeLists.txt  Kconfig
drivers/phy_802154/buffer/: bmm.c  bmm.h
drivers/phy_802154/pal/: pal.c  pal.h  pal_pta_interface.c  pal_pta_interface.h
drivers/phy_802154/phy/: app_config.h  phy.h  phy_ed_end_cb.c  phy_rx_frame_cb.c  phy_task.c  phy_tx_frame_done_cb.c  phy_utils.c  phy_utils.h  stack_config.h
drivers/phy_802154/queue/: qmm.c  qmm.h
drivers/phy_802154/sal/: CMakeLists.txt
drivers/phy_802154/sal/pic32cx_bz2/: sal.c  sal.h
packs/pic32c/pic32cx_bz/: CMakeLists.txt
packs/pic32c/pic32cx_bz/bz24/include/: component-version.h  pic32c.h  pic32cx1012bz24032.h  system_bz24.h
packs/pic32c/pic32cx_bz/bz24/include/component/: ac.h  adchs.h  aes.h  arb.h  ble.h  btzbsys.h  ccl.h  cfg.h  cmcc.h  cru.h  dmac.h  dmt.h  dscon.h  dsu.h  eic.h  evsys.h  freqm.h  fuses.h  gpio.h  hmatrixb.h  icm.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  pukcc.h  qspi.h  ramecc.h  rcon.h  rtc.h  sercom.h  tc.h  tcc.h  trng.h  wdt.h  zigbee.h
packs/pic32c/pic32cx_bz/bz24/include/instance/: ac.h  adchs.h  aes.h  arb.h  ble.h  btzbsys.h  ccl.h  cfg.h  cmcc.h  cru.h  dmac.h  dmt.h  dscon.h  dsu.h  eic.h  evsys.h  freqm.h  fuses.h  gpioa.h  gpiob.h  hmatrix.h  icm.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  qspi.h  ramecc.h  rcon.h  rtc.h  sercom0.h  sercom1.h  tc0.h  tc1.h  tc2.h  tc3.h  tcc0.h  tcc1.h  (+4 more)
packs/pic32c/pic32cx_bz/bz24/include/pio/: pic32cx1012bz24032.h
packs/pic32c/pic32cx_bz/bz25/include/: component-version.h  pic32c.h  pic32cx1012bz25048.h  system_bz25.h
packs/pic32c/pic32cx_bz/bz25/include/component/: ac.h  adchs.h  aes.h  arb.h  ble.h  btzbsys.h  ccl.h  cfg.h  cmcc.h  cru.h  dmac.h  dmt.h  dscon.h  dsu.h  eic.h  evsys.h  freqm.h  fuses.h  gpio.h  hmatrixb.h  icm.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  pukcc.h  qspi.h  ramecc.h  rcon.h  rtc.h  sercom.h  tc.h  tcc.h  trng.h  wdt.h  zigbee.h
packs/pic32c/pic32cx_bz/bz25/include/instance/: ac.h  adchs.h  aes.h  arb.h  ble.h  btzbsys.h  ccl.h  cfg.h  cmcc.h  cru.h  dmac.h  dmt.h  dscon.h  dsu.h  eic.h  evsys.h  freqm.h  fuses.h  gpioa.h  gpiob.h  hmatrix.h  icm.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  qspi.h  ramecc.h  rcon.h  rtc.h  sercom0.h  sercom1.h  sercom2.h  sercom3.h  tc0.h  tc1.h  tc2.h  tc3.h  (+6 more)
packs/pic32c/pic32cx_bz/bz25/include/pio/: pic32cx1012bz25048.h
packs/pic32c/pic32cx_bz/bz3/include/: component-version.h  pic32c.h  pic32cx5109bz31032.h  pic32cx5109bz31048.h  system_pic32cxbz31.h
packs/pic32c/pic32cx_bz/bz3/include/component/: ac.h  adchs.h  arb.h  ble.h  btzbsys.h  ccl.h  cfg.h  cmcc.h  cru.h  cvd.h  dac_ctrl.h  dgi_spi.h  dmac.h  dmt.h  dscon.h  dsu.h  efuse.h  eic.h  evsys.h  freqm.h  fuses.h  gpio.h  hmatrix2top.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  qspi.h  ramecc.h  rcon.h  rot.h  rtc.h  sercom.h  silex.h  tc.h  tcc.h  wdt.h  zigbee.h
packs/pic32c/pic32cx_bz/bz3/include/instance/: ac.h  adchs.h  arb.h  ble.h  btzbsys.h  ccl.h  cfg.h  cmcc.h  cru.h  cvd.h  dac_ctrl.h  dgi_spi.h  dmac.h  dmt.h  dscon.h  dsu.h  efuse.h  eic.h  evsys.h  freqm.h  fuses.h  gpioa.h  gpiob.h  hmatrix2top.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  qspi.h  ramecc.h  rcon.h  rot.h  rtc.h  sercom0.h  sercom1.h  sercom2.h  silex.h  tc0.h  (+12 more)
packs/pic32c/pic32cx_bz/bz3/include/pio/: pic32cx5109bz31032.h  pic32cx5109bz31048.h
packs/pic32c/pic32cx_bz/bz62/include/: component-version.h  pic32c.h  pic32cx2051bz62064.h  pic32cx2051bz62132.h  system_pic32cxbz62.h
packs/pic32c/pic32cx_bz/bz62/include/component/: ac.h  adchs.h  arb.h  ble.h  btzbsys.h  can.h  ccl.h  cfg.h  cmcc.h  cru.h  cvd.h  dac_ctrl.h  dmac.h  dmt.h  dscon.h  dsu.h  efuse.h  eic.h  eth.h  evsys.h  freqm.h  fuses.h  gpio.h  hmatrix2top.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  qei.h  qspi.h  ramecc.h  rcon.h  rot.h  rtc.h  sercom.h  silex.h  tc.h  tcc.h  (+3 more)
packs/pic32c/pic32cx_bz/bz62/include/instance/: ac.h  adchs.h  arb.h  ble.h  btzbsys.h  can0.h  can1.h  ccl.h  cfg.h  cmcc.h  cru.h  cvd.h  dac_ctrl.h  dmac.h  dmt.h  dscon.h  dsu.h  efuse.h  eic.h  eth.h  evsys.h  freqm.h  fuses.h  gpioa.h  gpiob.h  gpioc.h  gpiod.h  gpioe.h  hmatrix2top.h  nvm.h  pac.h  pche.h  pfw.h  pmu.h  pps.h  qei.h  qspi.h  ramecc.h  rcon.h  rot.h  (+25 more)
packs/pic32c/pic32cx_bz/bz62/include/pio/: pic32cx2051bz62064.h  pic32cx2051bz62132.h
packs/pic32c/pic32cx_bz/bz66/include/: component-version.h  pic32c.h  pic32cx2051bz66048.h  system_pic32cxbz66.h
packs/pic32c/pic32cx_bz/bz66/include/component/: ac.h  adchs.h  arb.h  ble.h  btzbsys.h  can.h  ccl.h  cfg.h  cmcc.h  cru.h  cvd.h  dac_ctrl.h  dmac.h  dmt.h  dscon.h  dsu.h  efuse.h  (+24 more)
packs/pic32c/pic32cx_bz/common/: pic32cx_bz.h  sercom_pic32cx_bz.h
(+177 files in other folders)
